--- a/fase2/02/desafio-02-3/assets/css/style.css
+++ b/fase2/02/desafio-02-3/assets/css/style.css
@@ -15,6 +15,22 @@ body {
     background: #282a36;
 }
 
+h1 {
+    font-size: 68.72px;
+}
+
+p {
+    font-size: 18px;
+}
+
+h2 {
+    margin-top: 16px;
+}
+
+ul>li {
+    padding: 5px;
+}
+
 
 /* ===== MENU's ===== */
 
@@ -43,22 +59,6 @@ header .menu {
 
 
 /* ===== BODY =====*/
-
-h1 {
-    font-size: 68.72px;
-}
-
-p {
-    font-size: 18px;
-}
-
-h2 {
-    margin-top: 16px;
-}
-
-ul>li {
-    padding: 5px;
-}
 
 .wrapper {
     color: #ffffff;
@@ -95,7 +95,76 @@ ul>li {
 
 .card:hover {
     border: 1px solid var(--green-color);
-    transition: 0.4s;
+    transition: 0.5s;
+}
+
+.card-img img {
+    height: 145px;
+}
+
+.card-info {
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+
+.card-info .card-price {
+    border-radius: 15px;
+    background: #282a36;
+}
+
+
+/* ===== MODAL ===== */
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    position: relative;
+    width: 90%;
+    height: 90%;
+    margin: 5vh auto;
+    background-color: #ffffff;
+}
+
+.modal .close-modal {
+    color: #000000;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    height: 24px;
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+
+.modal .close-modal:hover {
+    border: 1px solid;
+    border-radius: 5px;
+    color: #ff0000;
+    transition: 0.5s;
+}
+
+
+/* ===== MODAL.ACTIVE ===== */
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+iframe {
+    width: 100%;
+    height: 93%;
+    position: absolute;
+    top: 7%;
 }
 
 
