Adjustment in the css project, challenge 02-3

--- a/fase2/02/desafio-02-3/assets/css/style.css
+++ b/fase2/02/desafio-02-3/assets/css/style.css
@@ -86,12 +86,12 @@ header .menu {
 }
 
 .card {
+    background: rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 250px;
     padding: 15px;
     border-radius: 15px;
     color: #ffffff;
-    background: #2f4f4f;
     border: 1px solid transparent;
 }
 
@@ -120,7 +120,7 @@ header .menu {
 
 .card-info .card-price {
     border-radius: 15px;
-    background: #282a36;
+    background: #2f4f4f;
 }
 
 
