Layout adjustments and card inclusion.

--- a/fase2/02/desafio-foodfy/assets/css/style.css
+++ b/fase2/02/desafio-foodfy/assets/css/style.css
@@ -8,6 +8,10 @@
     border: 0;
 }
 
+:root {
+    --maxwidth940: 940px;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -18,7 +22,7 @@ body {
 .navbar {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    max-width: 940px;
+    max-width: var(--maxwidth940);
     margin: 37px auto 30px auto;
 }
 
@@ -42,16 +46,15 @@ body {
 .contain {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 940px;
-    margin: 0 auto;
-    background: #FBDFDB;
+    max-width: var(--maxwidth940);
     height: 366px;
+    margin: 0 auto 50px auto;
+    background: #FBDFDB;
     border-radius: 30px;
 }
 
 .text-contain {
-    padding-top: 117px;
-    padding-left: 60px;
+    padding: 117px 0 0 60px;
 }
 
 .description h1 {
@@ -65,10 +68,37 @@ body {
     opacity: 0.7;
     font-size: 18px;
     line-height: 28px;
+    margin-top: 10px;
 }
 
-.img-contain img {
-    padding: 66px 100px 0 248px;
+.contain .img-contain img {
+    padding: 62px 100px 0 154px;
+}
+
+.accessed {
+    max-width: var(--maxwidth940);
+    margin: 0 auto;
+}
+
+.accessed h1 {
+    color: #111111;
+    line-height: 28px;
+}
+
+.most-accessed {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.img-accessed {
+    height: 140px;
+}
+
+.most-accessed .img-accessed img {
+    border-radius: 15px;
+    width: 300px;
 }
 
 footer {
