--- a/fase2/02/desafio-foodfy/assets/css/style.css
+++ b/fase2/02/desafio-foodfy/assets/css/style.css
@@ -92,7 +92,7 @@ body {
 .most-accessed {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    column-gap: 20px;
     margin-top: 20px;
 }
 
@@ -105,7 +105,34 @@ body {
     width: 300px;
 }
 
-footer {
+.most-accessed .card-content-accessed {
+    margin: 20px 0 30px 0;
+}
+
+.most-accessed .card-content-accessed h3 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #111111;
+}
+
+.most-accessed .card-content-accessed .author {
+    font-size: 14px;
+    line-height: 16px;
+    color: #777777;
+}
+
+.footer {
+    margin-top: 20px;
     background: #EEEEEE;
+    text-align: center;
     height: 62px;
+}
+
+.footer h6 {
+    color: #999999;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    padding: 23px;
 }
